<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:maxHeight="400dp"
              android:maxWidth="400dp"
              android:orientation="vertical"
              app:layout_constraintHeight_max="400dp"
              app:layout_constraintWidth_max="400dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:focusableInTouchMode="true"
            android:maxHeight="400dp"
            android:maxWidth="400dp"
            android:orientation="vertical"
            android:weightSum="1"
            app:layout_constraintHeight_max="400dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="400dp">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/dialog_start_select_operation"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editsinklayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editsink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/dialog_start_own_eid"
                    android:inputType="textPersonName"
                    android:maxLength="8"
                    android:paddingTop="4dp"/>

            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="175dp">

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dialog_start_label_new_share"/>

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/dialog_start_label_join_share"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/editjoineidlayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:paddingLeft="30dp"
                        android:paddingStart="30dp"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/editjoineid"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/dialog_start_label_join_share_eid"
                            android:inputType="textPersonName"
                            android:maxLength="8"
                            android:paddingTop="4dp"/>

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

            </RadioGroup>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_start_label_button_connect"/>


        </LinearLayout>

    </android.support.constraint.ConstraintLayout>


</LinearLayout>